fix(cards): update alignment of card footer content

--- a/src/styles/application/_tutorialCard.scss
+++ b/src/styles/application/_tutorialCard.scss
@@ -20,4 +20,13 @@
   width: 100%;
   bottom: 0;
   padding-bottom: 20px;
+  display: flex;
+  &-get-started {
+    flex-basis: 50%;
+    text-align: left;
+  }
+  &-time-to-complete {
+    flex-basis: 50%;
+    text-align: right;
+  }
 }
